Animal_shelter/force-app/main/default/objects/Pet_Experience__c/Pet_Experience__c.object-meta.xml
<CustomObject>
    <label>Pet Experience</label>
    <pluralLabel>Pet Experiences</pluralLabel>
    <nameField>
        <displayFormat>PE-{0000}</displayFormat>
        <label>Pet Experience Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>