Animal_shelter/force-app/main/default/objects/Pet_Experience__c/fields/Adopter__c.field-meta.xml
<CustomField>
    <fullName>Adopter__c</fullName>
    <label>Adopter</label>
    <referenceTo>Adopter__c</referenceTo>
    <relationshipLabel>Pet Experiences</relationshipLabel>
    <relationshipName>Pet_Experiences</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>