Animal_shelter/force-app/main/default/objects/Pet_Experience__c/fields/Current_Pets__c.field-meta.xml
<CustomField>
    <fullName>Current_Pets__c</fullName>
    <label>Current Pets</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>