Animal_shelter/force-app/main/default/objects/Pet_Experience__c/fields/Current_Pets_Spayed__c.field-meta.xml
<CustomField>
    <fullName>Current_Pets_Spayed__c</fullName>
    <label>Current Pets Spayed</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>