Animal_shelter/force-app/main/default/objects/Pet_Experience__c/fields/Current_Pets_Vaccinated__c.field-meta.xml
<CustomField>
    <fullName>Current_Pets_Vaccinated__c</fullName>
    <label>Current Pets Vaccinated</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>